# IMUIntegration

./: CMakeLists.txt  package.xml  test.launch
include/: eigen_types.h  imu.h  imu_integration.h
src/: main.cpp
